lib/tests/fixtures/compiler/evaluation/binary_op_context.pp
notice(1 + 2 + 3 in bar)
